# ML-Placement-Initialization

./: .gitignore  Makefile  MaskPLAN.py  README.md  WSL | Docker Desktop Installation Guide.md  cluster.py  extractor.py  infer_time.txt  prediction.py  pyproject.toml  run.py  source_env.sh
MaskPLAN_dir/: MaskPLAN_BaseAll_vec.py
OpenROAD-flow-scripts/flow/: python_read_design.py
database/: README.md  results.md
database/aes_asap7/: 3_5_place_dp.baseline.json  aes.pkl  aes_asap7.txt  aes_hierarchy_cluster.json  aes_placement_clusters.json  baseline.txt  cluster_area.json  cluster_boxes_map.json  cluster_netlists.json  cluster_tensor_data.npy  instance_pin_boundary_map.json  level_cluster_map_sorted.json  level_cluster_map_unsorted.json
database/aes_nangate45/: aes.pkl  aes_hierarchy.json  aes_hierarchy_cluster.json  aes_nangate45.txt  baseline.txt  cluster_area.json  cluster_boxes_map.json  cluster_netlists.json  cluster_tensor_data.npy  instance_pin_boundary_map.json  level_cluster_map_sorted.json  level_cluster_map_unsorted.json
database/gcd/: cluster_area.json  init_placement_test.txt
database/gcd_asap7/: 1_1_yosys.v  1_synth.rtlil  2_1_floorplan.odb  2_2_floorplan_macro.odb  2_3_floorplan_tapcell.odb  2_4_floorplan_pdn.odb  (+30 more)
designs/: import.sh  metrics.sh  migrate.sh
mapping/: README.md  cluster_area.json  cluster_tensor_data.npy  compute_hierarchy_area.py  compute_hierarchy_connectivity.py  hierarchy_connectivity.json  ibex_nangate45.txt  level_cluster_map_sorted.json  mapping.py
model/: MaskPLAN_BaseAll_vec.py  RPLAN_B.npy  predict.py  utils.py
(+55200 files in other folders)
