[project]
name = "maskplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9"
dependencies = [
    "keras==2.6.0",
    "matplotlib>=3.6.3",
    "networkx>=3.2.1",
    "opencv-python>=4.5.3.56",
    "pillow>=11.2.1",
    "protobuf==3.20",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.10.1",
    "shapely==2.0.2",
    "tensorflow==2.6.0",
    "tensorflow-gpu==2.6.0",
]

[tool.setuptools]
packages = []

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
maskplan = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cudnn = "==8.2.1.32"
cudatoolkit = "==11.8"
